--- a/form1.html
+++ b/form1.html
@@ -53,7 +53,7 @@
         <option value="Myanmar">Myanmar</option>
       </select></td>
       
-      <tr><td> Skills:</td><td><input type="checkbox" id="Batting" name="Batting" ></td><label for="Batting">Batting</label><td><input type="checkbox" id="Bowling" name="Bowling"></td><td><label for="Bowling">Bowling</label> </td>
+      <tr><td> Skills:</td><td><input type="checkbox" id="Batting" name="Batting" ></td><td><label for="Batting">Batting</label></td><td><input type="checkbox" id="Bowling" name="Bowling"></td><td><label for="Bowling">Bowling</label> </td>
       <tr><td>Bat Style:</td><td><input type="checkbox" id="Righthanded " name="Righthanded" ></td><td><label for="Righthanded">Righthanded</label></td>
       <td><input type="checkbox" id="Lefthanded" name="Lefthanded" ></td> <td><label for="Lefthanded">Lefthanded</label></td>
       <tr><td>Bowl Style:</td><td><input type="checkbox" name="Righthanded" ></td>
